# libfds

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  coding_style.rst  libfds.h  libnf2.h
CMakeModules/: FindLibZstd.cmake  unit_tests.cmake
include/: CMakeLists.txt  libfds.h
include/libfds/: api.h  api.h.in  common.h  converters.h  drec.h  dummy.h  file.h  filter.h  iemgr.h  ipfix_filter.h  ipfix_parsers.h  ipfix_structs.h  template.h  template_mgr.h  trie.h  xml_parser.h
src/: CMakeLists.txt  api.c  build_config.h.in  ipfix_structures.h
src/converters/: CMakeLists.txt  branchlut2.h  converters.c  generate_protocols.awk  json.c  protocols.h
src/drec/: CMakeLists.txt  iterator.c
src/dummy_dir/: CMakeLists.txt  dummy.c
src/file/: Block_content.cpp  Block_content.hpp  Block_data_reader.cpp  Block_data_reader.hpp  Block_data_writer.cpp  Block_data_writer.hpp  Block_session.cpp  Block_session.hpp  Block_templates.cpp  Block_templates.hpp  CMakeLists.txt  File_base.cpp  File_base.hpp  File_exception.cpp  File_exception.hpp  File_reader.cpp  File_reader.hpp  File_writer.cpp  File_writer.hpp  Io_async.cpp  Io_async.hpp  Io_request.cpp  Io_request.hpp  Io_sync.cpp  Io_sync.hpp  file.cpp  structure.h
src/file/lz4/: lz4.h
src/file/zstd/: VERSION
src/file/zstd/CMakeModules/: AddZstdCompilationFlags.cmake
src/file/zstd/lib/: CMakeLists.txt  zstd.h
src/filter/: CMakeLists.txt  README.md  api.c  api.h  array.h  ast.c  ast.h  ast_common.h  ast_semantic.c  ast_semantic.h  ast_utils.h  common.h  debug.h  error.c  error.h  eval_common.h  eval_evaluator.c  eval_evaluator.h  eval_generator.c  eval_generator.h  evaluate.c  evaluate.h  evaluator.c  evaluator.h  evaluator_functions.c  evaluator_functions.h  filter.c  filter.h  operations.h  optimizer.c  opts.c  opts.h  parser.c  parser.h  parser.y  preprocess.c  preprocessor.c  scanner.c  scanner.h  scanner.l  (+7 more)
src/filter/operations/: flags.c  flags.h  float.c  float.h  int.c  int.h  ip.c  ip.h  mac.c  mac.h  other.c  other.h  str.c  str.h  trie.c  trie.h  uint.c  uint.h
src/iemgr/: CMakeLists.txt  fds_iemgr_todo_name.h  iemgr.cpp  iemgr_alias.cpp  iemgr_alias.h  iemgr_common.cpp  iemgr_common.h  iemgr_element.cpp  iemgr_element.h  iemgr_mapping.cpp  iemgr_mapping.h  iemgr_scope.cpp  iemgr_scope.h
src/ipfix_filter/: CMakeLists.txt  ipfix_filter.c
src/parsers/: CMakeLists.txt  ipfix_parser.c  list_parser.c
src/proposals/File/: file_struct.h
src/template_mgr/: CMakeLists.txt  garbage.c  garbage.h  snapshot.c  snapshot.h  template.c  template_manager.c
src/trie/: CMakeLists.txt  trie.c
src/xml_parser/: CMakeLists.txt  main.cpp  xml_parser.cpp
tests/unit_tests/: CMakeLists.txt  api.cpp
tests/unit_tests/converters/: CMakeLists.txt  datetime.cpp  json.cpp  numbers_be.cpp  to_string.cpp
tests/unit_tests/converters/data/: iana.xml
tests/unit_tests/drec/: CMakeLists.txt  drec.cpp
tests/unit_tests/dummy/: CMakeLists.txt  simple_test.cpp
tests/unit_tests/file/: Block_content.cpp  Block_data.cpp  Block_session.cpp  Block_templates.cpp  CMakeLists.txt  File_exception.cpp  file_append.cpp  file_complex.cpp  file_invalid.cpp  file_simple.cpp  wr_env.hpp
tests/unit_tests/filter/: CMakeLists.txt  filter.cpp  filter_wrapper.h  ip_list.cpp  ip_list.inc  tests.cpp
tests/unit_tests/iemgr/: CMakeLists.txt  iemgr_add.cpp  iemgr_alias.cpp  iemgr_clear.cpp  iemgr_common.h  iemgr_compare_timestamps.cpp  iemgr_conversions.cpp  iemgr_copy.cpp  iemgr_create.cpp  iemgr_destroy.cpp  iemgr_err.cpp  iemgr_find.cpp  iemgr_mapping.cpp  iemgr_read.cpp
tests/unit_tests/iemgr/test_files/invalid/: alias_duplicate.xml  alias_empty_name.xml  alias_empty_sources.xml  alias_invalid_name_chars.xml  alias_invalid_name_spaces.xml  alias_missing_element.xml  biflow_same_normal.xml  elem_big_biflowId.xml  elem_big_id.xml  elem_data_seman.xml  elem_data_status.xml  elem_data_type.xml  elem_data_unit.xml  elem_empty_name.xml  elem_no_data_type.xml  elem_no_name.xml  mappings_duplicate.xml  mappings_invalid_key_blank.xml  mappings_invalid_key_chars.xml  mappings_invalid_key_space.xml  mappings_invalid_match.xml  mappings_invalid_value.xml  mappings_no_match.xml  mappings_nonexistent.xml  no_scope.xml  pen_with_biflowId.xml  scope_big_biflowId.xml  scope_invalid_biflow.xml  scope_name_empty.xml  scope_no_name.xml  scope_no_pen.xml  split_id_out_of_range.xml  split_with_biflowId.xml  split_with_reverse.xml  two_same_elem.xml
tests/unit_tests/iemgr/test_files/invalid/normal_over_reverse/system/elements/: iana.xml
tests/unit_tests/iemgr/test_files/invalid/normal_over_reverse/user/elements/: iana.xml
tests/unit_tests/iemgr/test_files/valid/: aliases.xml  aliases_special_prefix.xml  else_if.xml  individual.xml  one_elem.xml  pen.xml  split.xml
tests/unit_tests/iemgr/test_files/valid/readdir_alias_mapping/system/: mappings.xml
tests/unit_tests/iemgr/test_files/valid/readdir_alias_mapping/user/: aliases.xml  mappings.xml
tests/unit_tests/lists/: CMakeLists.txt  blist.cpp  new_stlist.cpp  stlist.cpp
tests/unit_tests/lists/data/: iana.xml
tests/unit_tests/parsers/: CMakeLists.txt  parser_dset.cpp  parser_msg.cpp  parser_tset.cpp
tests/unit_tests/parsers/tools/: MsgGen.cpp  MsgGen.h
tests/unit_tests/template/: CMakeLists.txt  template_parse.cpp
tests/unit_tests/templates/: CMakeLists.txt  template_copy.cpp  template_flowkey.cpp  template_ies_define.cpp  template_parse.cpp  tmgr_common.cpp  tmgr_sctp.cpp  tmgr_tcp.cpp  tmgr_tcpSctp.cpp  tmgr_tcpSctpFile.cpp  tmgr_udp.cpp  tmgr_udpFile.cpp  tmgr_udpSctpFile.cpp
tests/unit_tests/templates/data/: iana.xml
tests/unit_tests/templates/tools/: TGenerator.cpp  TGenerator.h  TMock.cpp  TMock.h  common_tests.cpp  common_tests.h
tests/unit_tests/tools/: MsgGen.cpp  MsgGen.h  TGenerator.cpp
tests/unit_tests/trie/: CMakeLists.txt  trie.cpp
tests/unit_tests/xml_parser/: CMakeLists.txt  main.cpp  xml_parser_create.cpp  xml_parser_destroy.cpp  xml_parser_last_err.cpp  xml_parser_next.cpp  xml_parser_parse.cpp  xml_parser_rewind.cpp  xml_parser_set_args.cpp
(+46 files in other folders)
